...
                                        self.isPlaying = false
                                 } else {
                                    playRecording(audio: recording.audio)
                                    self.isPlaying = true
                                 }
                             }) {
                        Image(systemName: self.isPlaying == true ? "pause.fill" : "play.fill")
                    }
                }
                
                Spacer()
                
                /*HStack {
...
